--- a/src/Translations/cs.json
+++ b/src/Translations/cs.json
@@ -1,19 +1,8 @@
 {
   "alerts": {
-    "authExpire": "Došlo k automatickému odhlášení.",
+    "authExpire": "Došlo k automatickému odhlášení",
     "onGlobalError": "Došlo k chybě, pokud je závažného charakteru a bude přetrvávat, kontaktujte prosím podporu.",
-    "update": "Došlo k aktualizaci aplikace."
-  },
-  "api": {
-    "errors": {
-      "ERROR_CHANGE_PASSWORD": "Změna hesla se nezdařila.",
-      "ERROR_INCORRECT_PASSWORD": "Nesprávné heslo.",
-      "ERROR_SEND_EMAIL_NO_RESPONSE": "E-mail se pravděpodobně nepodařilo odeslat.",
-      "ERROR_SEND_EMAIL_FAILED": "E-mail se bohužel nepodařilo odeslat."
-    },
-    "response": {
-      "SEND_EMAIL_SUCCESS": "E-mail byl úspěsně odeslán."
-    }
+    "update": "Došlo k aktualizaci aplikace"
   },
   "components": {
     "dayPicker": {
@@ -54,26 +43,26 @@
   "errors": {
     "validation": {
       "input": {
-        "isRequired": "Toto pole je povinné.",
-        "isEmail": "Neplatný formát.",
-        "isPhone": "Neplatný formát.",
-        "isPSC": "Neplatný formát.",
-        "isICO": "Neplatný formát.",
-        "isRC": "Neplatný formát.",
-        "isAlphabetic": "Toto pole může obsahovat pouze písmena.",
-        "isAlphanumeric": "Toto pole může obsahovat pouze číslice a písmena.",
-        "isNumber": "Toto pole může obsahovat pouze číslice.",
-        "hasMinNumber": "Minimální hodnota je {validationParam}.",
-        "hasMaxNumber": "Maximální hodnota je {validationParam}.",
-        "hasMinLength": "Text musí mít minimálně {validationParam} znaky.",
-        "hasMaxLength": "Text může mít maximálně jen {validationParam} znaků.",
-        "matches": "Neplatný formát."
+        "isRequired": "Toto pole je povinné",
+        "isEmail": "Neplatný formát",
+        "isPhone": "Neplatný formát",
+        "isPSC": "Neplatný formát",
+        "isICO": "Neplatný formát",
+        "isRC": "Neplatný formát",
+        "isAlphabetic": "Toto pole může obsahovat pouze písmena",
+        "isAlphanumeric": "Toto pole může obsahovat pouze číslice a písmena",
+        "isNumber": "Toto pole může obsahovat pouze číslice",
+        "hasMinNumber": "Minimální hodnota je {validationParam}",
+        "hasMaxNumber": "Maximální hodnota je {validationParam}",
+        "hasMinLength": "Text musí mít minimálně {validationParam} znaky",
+        "hasMaxLength": "Text může mít maximálně jen {validationParam} znaků",
+        "matches": "Neplatný formát"
       }
     },
     "login": {
       "401": "Neplatné přihlašovací údaje!",
-      "500": "Příhlášení se nezdařilo.",
-      "503": "Příhlášení se nezdařilo."
+      "500": "Příhlášení se nezdařilo",
+      "503": "Příhlášení se nezdařilo"
     }
   },
   "general": {
