--- a/src/Translations/cs.json
+++ b/src/Translations/cs.json
@@ -74,7 +74,7 @@
       "warning": "Upozornění"
     },
     "options": {
-      "fullScreen": "Zobrazit aplikaci přes celou obrazovku?"
+      "fullScreen": "Chcete zobrazit aplikaci přes celou obrazovku?"
     }
   }
 }
